restructure data export